--- a/css/Principio.css
+++ b/css/Principio.css
@@ -40,7 +40,9 @@ header {
     color: #fff;
     padding: 10px 0;
     position: fixed;
-    width: 100%; /* Ancho del encabezado al 100% de la ventana */
+    width: 100%; 
+    z-index: 1000;
+    overflow: hidden;
 }
 
 /* Estilos para el contenedor */
@@ -54,6 +56,9 @@ header {
 #logo img {
     width: 100px;
     height: 100px;
+    margin: 15px;
+    margin-left: 20px;
+    margin-right: 50px;
 }
 
 /* Estilos para los enlaces de navegación */
@@ -459,9 +464,90 @@ footer {
     margin-right: 2vh;
 }
 
-/* Alineación del texto en el footer */
 footer p {
     margin: 0;
     font-size: 14px;
     text-align: center;
 }
+
+.form{
+    width:80%;
+    height:440px;
+    background:#fdf4f4;
+    border-radius:8px;
+    box-shadow:0 0 40px -10px #fd0101;
+    margin: 6vh auto;
+    margin-top: 50px;
+    padding:20px 30px;
+    max-width:calc(100vw - 40px);
+    box-sizing:border-box;font-family:'Montserrat',sans-serif;
+    position:relative
+}
+
+input{
+    width:100%;
+    padding:10px;box-sizing:border-box;
+    background:none;outline:none;
+    resize:none;border:0;
+    font-family:'Montserrat',sans-serif;transition:all .3s;
+    border-bottom:2px solid #bebed2
+}
+
+input:focus{
+    border-bottom:2px solid #78788c
+}
+
+button{
+    float:right;
+    padding:8px 12px;
+    margin:8px 0 0;
+    font-family:'Montserrat',sans-serif;
+    border:2px solid #78788c;
+    background:0;
+    color:#5a5a6e;
+    cursor:pointer;transition:all .3s
+}
+button:hover{
+    background:#78788c;
+    color:#fff
+}
+
+.div-contact{
+    content:'Hi';
+    position:absolute;
+    bottom:-2.5vh;
+    right:-20px;
+    background:#50505a;
+    color:#fff;
+    width:320px;
+    padding:16px 4px 16px 0;
+    border-radius:6px;
+    font-size:13px;
+    box-shadow:10px 10px 40px -14px #f38989}
+span{
+    margin:0 5px 0 15px
+}
+
+.redes-sociales {
+    margin: 50px;
+    text-align: center;
+}
+
+.redes-sociales a {
+    text-decoration: none;
+    margin: 0 10px; 
+    color: #333;
+    font-size: 20px;
+    transition: color 0.3s;
+}
+
+.redes-sociales a i {
+    margin-right: 5px;
+}
+
+.redes-sociales a:hover {
+    color: #ff6600;
+}
+
+
+
