--- a/css/noticias.css
+++ b/css/noticias.css
@@ -37,12 +37,43 @@ h3, h4{
     color: black;
   }
   
-  /* Cambiar el color de los enlaces al pasar el mouse */
   .topnav a.active {
     background-color: #04AA6D;
     color: white;
   }
 
+
+.boton{
+    background-color: #a8f6ef;
+    width: 10vh;
+    height: 5vh;
+}
+
+.boton:hover{
+    background-color: rgb(82, 160, 194);
+}
+
+.contenido{
+    min-height: 30vh;
+}
+
+
+#form-noticias{
+    background-color: #fff;
+    padding: 5vh;
+    margin-top: 2vh;;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2vh;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 100vh;
+}
+
+label{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
+}
 #noticias {
     background-image: linear-gradient(to bottom, rgb(78, 135, 248), rgb(42, 175, 232), rgb(191, 233, 237));
     text-align: center;
@@ -91,14 +122,11 @@ h3, h4{
 }
 
 textarea{
-    margin: 1vh;
+    
     width: 70%; 
     height: 60%; 
     padding: 8px; 
-    border: 1px solid #ccc;
+    border: 1px solid #292424;
     resize: vertical;
-}
-
-.contenido{
-    min-height: 30vh;
+    
 }
